[gd_scene load_steps=2 format=3 uid="uid://d1h6ixd8jxcre"]

[ext_resource type="Script" path="res://addons/gfred2/scripts/controllers/object_inspector_dock_controller.gd" id="1_5k2m7"]

[node name="ObjectInspectorDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_5k2m7")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
text = "Object Inspector"

[node name="Spacer" type="Control" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LockButton" type="Button" parent="MainContainer/Header"]
layout_mode = 2
text = "Lock"
toggle_mode = true

[node name="ObjectInfo" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="ObjectNameLabel" type="Label" parent="MainContainer/ObjectInfo"]
layout_mode = 2
text = "No object selected"

[node name="ObjectTypeLabel" type="Label" parent="MainContainer/ObjectInfo"]
layout_mode = 2
text = ""
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="Separator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="PropertiesContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CategoryTabs" type="TabContainer" parent="MainContainer/PropertiesContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Basic" type="ScrollContainer" parent="MainContainer/PropertiesContainer/CategoryTabs"]
layout_mode = 2

[node name="BasicProperties" type="VBoxContainer" parent="MainContainer/PropertiesContainer/CategoryTabs/Basic"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Transform" type="ScrollContainer" parent="MainContainer/PropertiesContainer/CategoryTabs"]
layout_mode = 2

[node name="TransformProperties" type="VBoxContainer" parent="MainContainer/PropertiesContainer/CategoryTabs/Transform"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Advanced" type="ScrollContainer" parent="MainContainer/PropertiesContainer/CategoryTabs"]
layout_mode = 2

[node name="AdvancedProperties" type="VBoxContainer" parent="MainContainer/PropertiesContainer/CategoryTabs/Advanced"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Actions" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="DuplicateButton" type="Button" parent="MainContainer/Actions"]
layout_mode = 2
text = "Duplicate"

[node name="DeleteButton" type="Button" parent="MainContainer/Actions"]
layout_mode = 2
text = "Delete"

[node name="Spacer2" type="Control" parent="MainContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="MainContainer/Actions"]
layout_mode = 2
text = "Reset"